diss: some polishing in sec 1.5

--- a/concluding.tex
+++ b/concluding.tex
@@ -7,6 +7,9 @@
 write again about general model framework (Section~\ref{sec:generalmodel}),
 inference properties etc.
 
+example in Section
+
+
 discussion of shapes as at the end of Section~\ref{sec:pdc-sensitivity} and \ref{sec:ibbm-resume}***
 
 emphasise modeling opportunities, and realistic description and treatment
