diss: summary notes for concluding section

--- a/concluding.tex
+++ b/concluding.tex
@@ -5,9 +5,23 @@
 \section{***Summary / Discussion***}
 
 write again about general model framework (Section~\ref{sec:generalmodel}),
-inference properties etc.
+inference properties etc.:
 
-example in Section
+\ref{sec:generalmodel} gives already a good summary, condensed here again, emphasising some points
+
+
+models based on sets of canonical conjugate priors form, in our view,
+a `sweet spot' in the realm of statistical models:
+easy to elicit (simple and straightforward interpretation of parameters,
+weigted average structure, model behaviour clear)
+and to apply (may construct priors as needed, closed form solutions for many quantities of interest),
+while giving reasonable inferences (uncertainty mirrored by size $\mathcal{M}$,
+inference criteria from Section~\ref{sec:gbicp-properties-criteria}, especially \pdc\ sensitivity),
+and *nicht das ende der fahnenstange*** (see outlook below).
+
+\pdc\ sensitivity: cautious inferences if, and only if, caution is needed
+
+example in Section~\ref{sec:commoncause}: special case of \pdc\ (zero counts),
 
 
 discussion of shapes as at the end of Section~\ref{sec:pdc-sensitivity} and \ref{sec:ibbm-resume}***
@@ -23,10 +37,9 @@ of model uncertainty as in \ref{sec:objections}
 study by ***krautenbacher*** shows that elicitation of $\MZ$ can be difficult,
 compares with \textcite{2005:whitcomb}, similar results****
 
-more studies for comparison with **** to be done
+more studies for comparison with the model from \ref{sec:generalmodel} to be done
 
 
-\ref{sec:generalmodel}
 
 
 
