diss: tweaking concluding remark notes and intro to sec 3.1

--- a/concluding.tex
+++ b/concluding.tex
@@ -4,20 +4,30 @@
 
 \section{***Summary / Discussion***}
 
+reasons to use IP models:
+
+issues in Bayesian inference: weakly informative priors, \pdc, or in general sensitivity to the prior
+
+realistic modeling of partial information
+
+
 write again about general model framework (Section~\ref{sec:generalmodel}),
 inference properties etc.:
 
 \ref{sec:generalmodel} gives already a good summary, condensed here again, emphasising some points
 
+trade-off between handling of $\MZ$ or $\MN$, and model properties.
 
 models based on sets of canonical conjugate priors form, in our view,
-a `sweet spot' in the realm of statistical models:
+a `sweet spot' in the realm of (imprecise) statistical models:
 easy to elicit (simple and straightforward interpretation of parameters,
 weigted average structure, model behaviour clear)
 and to apply (may construct priors as needed, closed form solutions for many quantities of interest),
 while giving reasonable inferences (uncertainty mirrored by size $\mathcal{M}$,
 inference criteria from Section~\ref{sec:gbicp-properties-criteria}, especially \pdc\ sensitivity),
-and *nicht das ende der fahnenstange*** (see outlook below).
+and allows flexible modelling (tweak prior sets according to needs),
+
+further refinements are within reach (see outlook below).
 
 \pdc\ sensitivity: cautious inferences if, and only if, caution is needed
 
@@ -37,7 +47,8 @@ of model uncertainty as in \ref{sec:objections}
 study by ***krautenbacher*** shows that elicitation of $\MZ$ can be difficult,
 compares with \textcite{2005:whitcomb}, similar results****
 
-more studies for comparison with the model from \ref{sec:generalmodel} to be done
+more studies for comparison with the model from \ref{sec:generalmodel} to be done,
+also with hierarchical models (Section~\ref{sec:hierarchical})?***
 
 
 
@@ -120,7 +131,7 @@ hope for a joint publication of GW, FC and MB explaining this in detail.
 elaborate thoughts in Section~\ref{sec:updating} again,
 see also comments at end of Section~\ref{sec:6-gw-071216},
 
-dual role of $\nz$ (Section~\ref{sec:ibbm-resume})
+dual role of $\nz$? (Section~\ref{sec:ibbm-resume})
 
 belief revision versus updating?
 
