--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -41,15 +41,18 @@ Interestingly, the inferences from the two approaches in Section~\ref{sec:isipta
 %\section{The General Model}
 \label{sec:generalmodel}
 
-***structure of section: here comes the important part!****
+%***structure of section: here comes the important part!****
 
-This section attempts to give a systematic overview on imprecise probability models
+This section gives a systematic overview on imprecise probability models
 for inference in canonical exponential families
 based on sets of canonical conjugate priors.
+It integrates the approaches discussed in Sections~\ref{sec:jstp} and \ref{sec:isipta11},
+and further approaches discussed in the literature, into a general framework,
+and reviews their inference properties.
 
 \medskip
 
-In Section~\ref{sec:basicsetting}, a ***general framework*** that characterises these models is elaborated,
+In Section~\ref{sec:basicsetting}, a general framework that characterises these models is elaborated,
 and the models discussed in the literature that can be subsumed*** under this framework are named/given/enumerated***.
 %
 Section~\ref{sec:gbicp-properties-criteria} presents a number of inference properties that this framework provides,
@@ -58,7 +61,7 @@ generalised Bayesian inference can offer: sensitivity to \pdc, and the case of w
 %
 The models from Section~\ref{sec:basicsetting} are then discussed in the light of the two criteria in
 Sections~\ref{sec:idm-and-near-ignorance} and \ref{sec:pdc-sensitivity},
-providing a summary of model strengths and weaknesses.***
+providing a summary of model strengths and weaknesses.
 
 
 \subsection{The General Framework}
